# GKD-Software-2025-Test

./: CMakeLists.txt
parts/: part1.md
sever/: part1.cpp  part1.h  part2.cpp  part2.h  part5  part5.cpp
